--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -7,4 +7,6 @@ span.David{
 p {
   color: rgb(181, 255, 177);background-color: rgb(255, 255, 207);
 }
-   
+p {
+  border: rgb(0, 0, 0) 5px inset;
+}
