--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,3 +9,35 @@
     margin-left: auto;
     margin-right: auto;
 }
+td, th {
+    border: rgb(39, 139, 164) 1px ridge;
+  }
+
+  html {
+    background-image: url(mar.jpg);
+  }
+h4.pp{
+    background-color: #e8f385;
+}
+
+ul{
+    text-decoration: underline;
+}
+h1{
+    text-align: center;
+}
+p.yo{
+    border: rgb(12, 68, 221) 5px dotted
+}
+h1,h2.oo,h2.ii,h3,h4,h5{
+    text-align: center;
+} 
+p.juju{
+    text-align: center;
+}
+body{
+    background-color: rgb(212, 249, 248);
+}
+html{
+    background-color: rgb(212, 249, 248);
+}
