--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,7 +7,7 @@ table.ji{
     td, th {
         border: rgb(101, 193, 216) 1px ridge;
       }
-table.jo{
+table.jojijo{
         border: #54e492 7px ridge;
     }
 
